route config done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,6 @@
     android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
-<!--    <com.google.android.material.appbar.AppBarLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:fitsSystemWindows="true">-->
-
-<!--        <com.google.android.material.appbar.MaterialToolbar-->
-<!--            android:id="@+id/toolbar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/actionBarSize" />-->
-
-<!--    </com.google.android.material.appbar.AppBarLayout>-->
-
-    <include layout="@layout/fragment_main" />
+    <include layout="@layout/fragment_container" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
