--- a/common/src/main/res/layout/fragment_container.xml
+++ b/common/src/main/res/layout/fragment_container.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_main"
-    android:name="androidx.navigation.fragment.NavHostFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:defaultNavHost="true"
-    app:navGraph="@navigation/nav_graph"
-    tools:context=".MainFragment">
+    android:id="@+id/fragment_container"
+    tools:context=".ContainerFragment">
 
 </androidx.fragment.app.FragmentContainerView>
