--- a/home/src/main/res/layout/fragment_home.xml
+++ b/home/src/main/res/layout/fragment_home.xml
@@ -10,12 +10,15 @@
         android:id="@+id/bottom_nav_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        app:menu="@menu/bottom_nav_menu"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/home_viewpage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"/>
 
