custom toolbar add

--- a/laterlist/src/main/res/layout/fragment_later_list.xml
+++ b/laterlist/src/main/res/layout/fragment_later_list.xml
@@ -11,10 +11,13 @@
         android:layout_height="wrap_content"
         app:liftOnScroll="true">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+        <include
+            android:id="@+id/later_list_toolbar"
+            layout="@layout/later_list_tool_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="center" />
+
     </com.google.android.material.appbar.AppBarLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
