--- a/laterlist/src/main/res/layout/fragment_later_list.xml
+++ b/laterlist/src/main/res/layout/fragment_later_list.xml
@@ -11,12 +11,25 @@
         android:layout_height="wrap_content"
         app:liftOnScroll="true">
 
-        <include
-            android:id="@+id/later_list_toolbar"
-            layout="@layout/later_list_tool_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_gravity="center" />
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:contentScrim="?attr/colorPrimaryContainer">
+
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:title="help"
+                app:layout_collapseMode="pin"/>
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+<!--        <include-->
+<!--            android:id="@+id/later_list_toolbar"-->
+<!--            layout="@layout/later_list_tool_bar"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="?attr/actionBarSize"-->
+<!--            android:layout_gravity="center" />-->
 
     </com.google.android.material.appbar.AppBarLayout>
 
