--- a/laterlist/src/main/res/layout/category_plate.xml
+++ b/laterlist/src/main/res/layout/category_plate.xml
@@ -2,44 +2,44 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="4dp"
+    android:layout_marginVertical="8dp"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
-        android:layout_marginHorizontal="8dp"
         android:orientation="horizontal">
 
         <include layout="@layout/category_card"
             android:id="@+id/category_all"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_margin="4dp"/>
 
         <include layout="@layout/category_card"
             android:id="@+id/category_favorite"
-            app:layout_constraintStart_toEndOf="@id/category_all"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_margin="4dp"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginHorizontal="8dp"
         android:orientation="horizontal">
 
         <include layout="@layout/category_card"
             android:id="@+id/category_bin"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_margin="4dp"/>
 
         <include layout="@layout/category_card"
             android:id="@+id/category_today"
@@ -47,7 +47,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_margin="4dp"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
