--- a/common/src/main/res/layout/folder_card.xml
+++ b/common/src/main/res/layout/folder_card.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingVertical="8dp"
     android:clickable="true"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="@dimen/cardView_radius"
-    app:cardElevation="3dp">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/material_card_shape">
+    android:foreground="?android:attr/selectableItemBackground">
 
         <ImageView
             android:id="@+id/category_icon"
+            android:layout_marginStart="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -26,21 +21,38 @@
             android:id="@+id/category_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             app:layout_constraintTop_toTopOf="@id/category_icon"
             app:layout_constraintBottom_toBottomOf="@id/category_icon"
-            app:layout_constraintStart_toEndOf="@id/category_icon"
+            app:layout_constraintStart_toEndOf="@id/guideline"
             android:text="@string/category_default"/>
 
         <TextView
             android:id="@+id/category_cnt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/category_cnt"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.13" />
 
-</androidx.cardview.widget.CardView>
+<!--        <View-->
+<!--            android:id="@+id/view_line"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="1dp"-->
+<!--            android:alpha="0.1"-->
+<!--            android:background="@color/md_theme_light_onSurface"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@id/guideline"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/category_cnt"-->
+<!--            android:layout_marginVertical="4dp"/>-->
+
+</androidx.constraintlayout.widget.ConstraintLayout>
