Add collect activity and add share code

--- a/laterlist/src/main/res/layout/fragment_all_later_list.xml
+++ b/laterlist/src/main/res/layout/fragment_all_later_list.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     tools:context=".alllater.AllLaterListFragment">
 
+    <include layout="@layout/search_edittext"/>
+
     <include
         android:id="@+id/category_plate"
         layout="@layout/category_plate" />
