--- a/laterlist/src/main/res/layout/fragment_later_list.xml
+++ b/laterlist/src/main/res/layout/fragment_later_list.xml
@@ -7,29 +7,25 @@
     tools:context=".LaterListFragment">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         app:liftOnScroll="true">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:contentScrim="?attr/colorPrimaryContainer">
 
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:title="help"
-                app:layout_collapseMode="pin"/>
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="center_horizontal"
+            app:title="@string/later_all_tool_bar_title"/>
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-<!--        <include-->
-<!--            android:id="@+id/later_list_toolbar"-->
-<!--            layout="@layout/later_list_tool_bar"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="?attr/actionBarSize"-->
-<!--            android:layout_gravity="center" />-->
+        <!--        <include-->
+        <!--            android:id="@+id/later_list_toolbar"-->
+        <!--            layout="@layout/later_list_tool_bar"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="?attr/actionBarSize"-->
+        <!--            android:layout_gravity="center" />-->
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -56,7 +52,7 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/later_list_view_pager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
