--- a/profile/src/main/res/layout/fragment_login.xml
+++ b/profile/src/main/res/layout/fragment_login.xml
@@ -68,10 +68,23 @@
         android:id="@+id/tv_forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
         android:textSize="14sp"
         android:textColor="@color/forget_password_text_color"
         android:text="@string/forgot_password"
+        app:layout_constraintTop_toBottomOf="@id/et_password"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_signup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:textSize="14sp"
+        android:textColor="@color/md_theme_light_primary"
+        android:text="@string/signup"
         app:layout_constraintTop_toBottomOf="@id/et_password"
         app:layout_constraintEnd_toEndOf="parent"/>
 
