--- a/common/src/main/res/menu/add_menu.xml
+++ b/common/src/main/res/menu/add_menu.xml
@@ -15,4 +15,8 @@
     <item android:id="@+id/create_video"
         android:title="@string/create_video"
         android:icon="@drawable/folder_icon"/>
+
+    <item android:id="@+id/create_tag"
+        android:title="@string/create_tag"
+        android:icon="@drawable/folder_icon"/>
 </menu>
