--- a/laterlist/src/main/res/layout/fragment_create_website.xml
+++ b/laterlist/src/main/res/layout/fragment_create_website.xml
@@ -72,6 +72,14 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/create_website_title_ev" />
 
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/create_website_tag_chip_group"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/fragment_folder_tag_selector"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
         <TextView
             android:id="@+id/create_website_content_tv"
             android:layout_width="wrap_content"
@@ -80,7 +88,7 @@
             android:text="@string/create_website_content"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_folder_tag_selector" />
+            app:layout_constraintTop_toBottomOf="@id/create_website_tag_chip_group" />
 
         <EditText
             android:id="@+id/create_website_content_ev"
