change the way of fragment stack manage

--- a/common/src/main/res/layout/later_item_website.xml
+++ b/common/src/main/res/layout/later_item_website.xml
@@ -4,13 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
         android:minHeight="160dp"
         android:paddingHorizontal="8dp"
         android:orientation="horizontal">
