--- a/laterlist/src/main/res/layout/fragment_later_item_list.xml
+++ b/laterlist/src/main/res/layout/fragment_later_item_list.xml
@@ -16,7 +16,8 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="?attr/actionBarSize"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
             <TextView
                 android:id="@+id/later_all_item_list_tool_bar_title"
