fix the click effect on item list

--- a/common/src/main/res/layout/later_item_website.xml
+++ b/common/src/main/res/layout/later_item_website.xml
@@ -5,16 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
+    android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
-    app:cardUseCompatPadding="true"
-    android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
         android:minHeight="160dp"
         android:paddingHorizontal="8dp"
         android:orientation="horizontal">
