add the dialog which provides the ability to create to do item

--- a/calendar/src/main/res/layout/fragment_calender.xml
+++ b/calendar/src/main/res/layout/fragment_calender.xml
@@ -63,6 +63,7 @@
         </androidx.core.widget.NestedScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/todo_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
