--- a/calendar/src/main/res/layout/layout_todo_list.xml
+++ b/calendar/src/main/res/layout/layout_todo_list.xml
@@ -2,12 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/todo_list_recycler_view"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="match_parent"
+        android:layout_marginHorizontal="12dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"/>
 
