--- a/common/src/main/res/layout/fragment_add_todo_dialog.xml
+++ b/common/src/main/res/layout/fragment_add_todo_dialog.xml
@@ -105,8 +105,8 @@
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                     android:textColor="@color/gray" />
 
-                <EditText
-                    android:id="@+id/todo_dialog_edit_text_start_time"
+                <TextView
+                    android:id="@+id/todo_dialog_text_start_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
@@ -137,8 +137,8 @@
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                     android:textColor="@color/gray" />
 
-                <EditText
-                    android:id="@+id/todo_dialog_edit_text_end_time"
+                <TextView
+                    android:id="@+id/todo_dialog_text_end_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
