--- a/notification/src/main/res/layout/fragment_chat_message.xml
+++ b/notification/src/main/res/layout/fragment_chat_message.xml
@@ -42,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:scrollbars="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/message_input_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,11 +69,21 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintBottom_toTopOf="@id/send_button"
+            android:alpha="0.3"
+            android:layout_marginBottom="4dp"
+            android:background="@color/md_theme_light_onSecondary"/>
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/send_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:text="Send"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
