--- a/notification/src/main/res/layout/chat_message_item_sender.xml
+++ b/notification/src/main/res/layout/chat_message_item_sender.xml
@@ -20,8 +20,8 @@
         android:id="@+id/chat_message_body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toStartOf="@id/chat_message_avatar"
         android:layout_marginEnd="8dp"
+        android:layout_toStartOf="@id/chat_message_avatar"
         android:background="@drawable/chat_message_sender_background"
         android:padding="12dp"
         android:textColor="@color/white"
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/chat_message_body"
         android:layout_toStartOf="@id/chat_message_avatar"
+        android:layout_marginEnd="8dp"
         android:textColor="@color/material_on_background_disabled"
         android:textSize="12sp"
         tools:text="Timestamp" />
