add the datastore to save the openai setting config into local store

--- a/profile/src/main/res/values/arrays.xml
+++ b/profile/src/main/res/values/arrays.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="model_options">
-        <item>Model 1</item>
-        <item>Model 2</item>
-        <item>Model 3</item>
+        <item>gpt-3.5-turbo</item>
+        <item>gpt-4</item>
     </string-array>
 </resources>
