--- a/common/src/main/res/layout/later_item_website.xml
+++ b/common/src/main/res/layout/later_item_website.xml
@@ -112,7 +112,7 @@
             android:layout_weight="1">
 
             <ImageView
-                android:id="@+id/item_favorite"
+                android:id="@+id/item_favorite_website"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/favorite_icon"
@@ -120,16 +120,16 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <ImageView
-                android:id="@+id/item_share"
+                android:id="@+id/item_share_website"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/share_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/item_more"
-                app:layout_constraintStart_toEndOf="@id/item_favorite" />
+                app:layout_constraintEnd_toStartOf="@id/item_more_website"
+                app:layout_constraintStart_toEndOf="@id/item_favorite_website" />
 
             <ImageView
-                android:id="@+id/item_more"
+                android:id="@+id/item_more_website"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/more_icon"
