--- a/common/src/main/res/layout/later_item_image.xml
+++ b/common/src/main/res/layout/later_item_image.xml
@@ -104,7 +104,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/item_image"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
@@ -114,7 +114,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
+            <com.example.common.custom.customView.InterceptEventImageView
                 android:id="@+id/item_favorite_image"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
@@ -122,7 +122,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
-            <ImageView
+            <com.example.common.custom.customView.InterceptEventImageView
                 android:id="@+id/item_share_image"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
@@ -131,7 +131,7 @@
                 app:layout_constraintEnd_toStartOf="@id/item_more_image"
                 app:layout_constraintStart_toEndOf="@id/item_favorite_image" />
 
-            <ImageView
+            <com.example.common.custom.customView.InterceptEventImageView
                 android:id="@+id/item_more_image"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
