finish the main function of image picker, and improve the performance when loading the image list

--- a/imagepicker/src/main/res/layout/image_item.xml
+++ b/imagepicker/src/main/res/layout/image_item.xml
@@ -7,7 +7,7 @@
 
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"/>
@@ -16,7 +16,6 @@
         android:id="@+id/check_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="8dp"/>
+        android:layout_gravity="top|end"/>
 
 </FrameLayout>
