--- a/imagepicker/src/main/res/layout/activity_image_picker.xml
+++ b/imagepicker/src/main/res/layout/activity_image_picker.xml
@@ -6,9 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ImagePickerActivity">
 
+    <include
+        android:id="@+id/toolbar_image_picker"
+        layout="@layout/toolbar_image_picker"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/album_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_image_picker"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
