--- a/imagepicker/src/main/res/layout/album_item.xml
+++ b/imagepicker/src/main/res/layout/album_item.xml
@@ -4,21 +4,28 @@
     android:id="@+id/album_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="8dp">
+
+    <ImageView
+        android:id="@+id/album_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/baseline_photo_album_24" />
 
     <TextView
         android:id="@+id/album_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:layout_weight="1"
+        android:layout_gravity="center"
+        android:paddingStart="8dp"
+        android:textSize="16sp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/image_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        android:layout_marginTop="8dp" />
+    <ImageView
+        android:id="@+id/album_expand_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/baseline_expand_more_24" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
